--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "c:\\Users\\jamal_ghatit\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
+    "python.pythonPath": "C:\\Users\\jamaljag\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
